WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109119
Fix build warning after
r142017
https://bugs.webkit.org/show_bug.cgi?id=109119
Summary
Fix build warning after r142017
KwangYong Choi
Reported
2013-02-06 18:07:25 PST
/home/cky/open-source/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp:1224:6: warning: unused parameter ‘documentURLString’ [-Wunused-parameter]
Attachments
Patch
(1.49 KB, patch)
2013-02-06 18:09 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
second try at fixing builds
(42.17 KB, patch)
2014-02-12 07:27 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
KwangYong Choi
Comment 1
2013-02-06 18:09:46 PST
Created
attachment 186967
[details]
Patch
Kentaro Hara
Comment 2
2013-02-07 04:13:24 PST
Comment on
attachment 186967
[details]
Patch LGTM, but it requires review from a WebKit2 owner, sorry:(
KwangYong Choi
Comment 3
2013-02-07 04:15:37 PST
(In reply to
comment #2
)
> (From update of
attachment 186967
[details]
) > LGTM, but it requires review from a WebKit2 owner, sorry:(
Thank you. :)
WebKit Review Bot
Comment 4
2013-02-07 16:29:07 PST
Comment on
attachment 186967
[details]
Patch Clearing flags on attachment: 186967 Committed
r142201
: <
http://trac.webkit.org/changeset/142201
>
WebKit Review Bot
Comment 5
2013-02-07 16:29:12 PST
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 6
2014-02-12 07:27:51 PST
Reopening to attach new patch.
youenn fablet
Comment 7
2014-02-12 07:27:56 PST
Created
attachment 223970
[details]
second try at fixing builds
youenn fablet
Comment 8
2014-02-12 07:29:50 PST
Uploaded patch for wrong bug, please disregard this second patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug