Fix build warning after r142017 https://bugs.webkit.org/show_bug.cgi?id=109119

Patch by KwangYong Choi <ky0.choi@samsung.com> on 2013-02-07
Reviewed by Alexey Proskuryakov.

Use UNUSED_PARAM macro to fix -Wunused-parameter build warning.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::getPluginPath):

Canonical link: https://commits.webkit.org/127445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142201 268f45cc-cd09-0410-ab3c-d52691b4dbfc